# base-project

./: .gitmodules  CMakeLists.txt  README.md
.github/actions/email-notification/: action.yml  workflow-fail-tempalte.html  workflow-fail-template.html  workflow-success-template.html  workflow-template-failure.j2
.github/actions/jfrog-upload-artifact/: action.yml
.github/actions/remove-linux-docker-runner/: action.yml
.github/actions/setup-linux-docker-runner/: action.yml
.github/actions/validate-build-ref/: action.yml
.github/actions/workflow-email-notification/: action.yml  generate-email-template.py  workflow-email-template.j2
.github/workflows/: action-tester-jfrog-artifactory-upload.yml  action-tester-linux-docker-runner.yml  action-tester-validate-build-ref  action-tester-validate-build-ref.yml  action-tester-workflow-email-notification.yml  build-alpha.yml  build-beta.yml  build-developer.yml  build-feature.yml  build-production.yml  build-rc.yml  cmake-build.yml  codeql.yml  docker-build.yml  email-notification.yml  feature-build.yml  git-checkout.yml  jfrog-upload-artifact.yml  playground.yml  production-build.yml  reusable-workflow-build.yml  reusable.yml  sample.yml  scratchpad.yml  test-composite-action.yml  workflow-email-notification.yml  workflow-tester-reusable.yml
src/: helper.cpp  helper.h  main.cpp
